@@ -393,6 +393,12 @@ void ObjectMoleculeFixChemistry(ObjectMolecule *I, int sele1, int sele2, int inv
                   else if(((!strcmp(ai1->name,"C2"))&&(!strcmp(ai2->name,"N3")))||
                           ((!strcmp(ai2->name,"C2"))&&(!strcmp(ai1->name,"N3")))) 
                     order=2;
+                  else if(((!strcmp(ai1->name,"P"))&&(!strcmp(ai2->name,"O1P")))||
+                          ((!strcmp(ai2->name,"P"))&&(!strcmp(ai1->name,"O1P")))) 
+                    order=2;
+                  else if(((!strcmp(ai1->name,"P"))&&(!strcmp(ai2->name,"O2P")))||
+                          ((!strcmp(ai2->name,"P"))&&(!strcmp(ai1->name,"O2P")))) 
+                    order=2;
                 }
                 break;
               }
@@ -408,6 +414,12 @@ void ObjectMoleculeFixChemistry(ObjectMolecule *I, int sele1, int sele2, int inv
                 
                 else if(((!strcmp(ai1->name,"C5"))&&(!strcmp(ai2->name,"C6")))||
                         ((!strcmp(ai2->name,"C5"))&&(!strcmp(ai1->name,"C6")))) 
+                  order=2;
+                else if(((!strcmp(ai1->name,"P"))&&(!strcmp(ai2->name,"O1P")))||
+                        ((!strcmp(ai2->name,"P"))&&(!strcmp(ai1->name,"O1P")))) 
+                  order=2;
+                else if(((!strcmp(ai1->name,"P"))&&(!strcmp(ai2->name,"O2P")))||
+                        ((!strcmp(ai2->name,"P"))&&(!strcmp(ai1->name,"O2P")))) 
                   order=2;
               }
               break;
@@ -441,7 +453,13 @@ void ObjectMoleculeFixChemistry(ObjectMolecule *I, int sele1, int sele2, int inv
                         ((!strcmp(ai2->name,"C8"))&&(!strcmp(ai1->name,"N7")))) 
                   order=2;
                 else if(((!strcmp(ai1->name,"C4"))&&(!strcmp(ai2->name,"C5")))||
-                        ((!strcmp(ai2->name,"C4"))&&(!strcmp(ai1->name,"c5")))) 
+                        ((!strcmp(ai2->name,"C4"))&&(!strcmp(ai1->name,"C5")))) 
+                  order=2;
+                else if(((!strcmp(ai1->name,"P"))&&(!strcmp(ai2->name,"O1P")))||
+                        ((!strcmp(ai2->name,"P"))&&(!strcmp(ai1->name,"O1P")))) 
+                  order=2;
+                else if(((!strcmp(ai1->name,"P"))&&(!strcmp(ai2->name,"O2P")))||
+                        ((!strcmp(ai2->name,"P"))&&(!strcmp(ai1->name,"O2P")))) 
                   order=2;
                 break;
               }
@@ -478,6 +496,29 @@ void ObjectMoleculeFixChemistry(ObjectMolecule *I, int sele1, int sele2, int inv
                   break;
                 }
                 break;
+              }
+              break;
+            case 'I':
+              if(ai1->resn[1]==0) {
+                if(((!strcmp(ai1->name,"C8"))&&(!strcmp(ai2->name,"N7")))||
+                   ((!strcmp(ai2->name,"C8"))&&(!strcmp(ai1->name,"N7")))) 
+                  order=2;
+                else if(((!strcmp(ai1->name,"C4"))&&(!strcmp(ai2->name,"C5")))||
+                        ((!strcmp(ai2->name,"C4"))&&(!strcmp(ai1->name,"C5")))) 
+                  order=2;
+                
+                else if(((!strcmp(ai1->name,"C6"))&&(!strcmp(ai2->name,"N1")))||
+                        ((!strcmp(ai2->name,"C6"))&&(!strcmp(ai1->name,"N1")))) 
+                  order=2;
+                else if(((!strcmp(ai1->name,"C2"))&&(!strcmp(ai2->name,"N3")))||
+                        ((!strcmp(ai2->name,"C2"))&&(!strcmp(ai1->name,"N3")))) 
+                  order=2;
+                else if(((!strcmp(ai1->name,"P"))&&(!strcmp(ai2->name,"O1P")))||
+                        ((!strcmp(ai2->name,"P"))&&(!strcmp(ai1->name,"O1P")))) 
+                  order=2;
+                else if(((!strcmp(ai1->name,"P"))&&(!strcmp(ai2->name,"O2P")))||
+                        ((!strcmp(ai2->name,"P"))&&(!strcmp(ai1->name,"O2P")))) 
+                  order=2;
               }
               break;
             case 'P':
@@ -552,6 +593,12 @@ void ObjectMoleculeFixChemistry(ObjectMolecule *I, int sele1, int sele2, int inv
                 else if(((!strcmp(ai1->name,"C5"))&&(!strcmp(ai2->name,"C6")))||
                         ((!strcmp(ai2->name,"C5"))&&(!strcmp(ai1->name,"C6")))) 
                   order=2;
+                else if(((!strcmp(ai1->name,"P"))&&(!strcmp(ai2->name,"O1P")))||
+                        ((!strcmp(ai2->name,"P"))&&(!strcmp(ai1->name,"O1P")))) 
+                  order=2;
+                else if(((!strcmp(ai1->name,"P"))&&(!strcmp(ai2->name,"O2P")))||
+                        ((!strcmp(ai2->name,"P"))&&(!strcmp(ai1->name,"O2P")))) 
+                  order=2;
                 break;
               }
               break;
@@ -567,6 +614,13 @@ void ObjectMoleculeFixChemistry(ObjectMolecule *I, int sele1, int sele2, int inv
                 else if(((!strcmp(ai1->name,"C5"))&&(!strcmp(ai2->name,"C6")))||
                         ((!strcmp(ai2->name,"C5"))&&(!strcmp(ai1->name,"C6")))) 
                   order=2;
+                else if(((!strcmp(ai1->name,"P"))&&(!strcmp(ai2->name,"O1P")))||
+                        ((!strcmp(ai2->name,"P"))&&(!strcmp(ai1->name,"O1P")))) 
+                  order=2;
+                else if(((!strcmp(ai1->name,"P"))&&(!strcmp(ai2->name,"O2P")))||
+                        ((!strcmp(ai2->name,"P"))&&(!strcmp(ai1->name,"O2P")))) 
+                  order=2;
+
               }
               break;
               
@@ -2667,6 +2721,13 @@ int ObjectMoleculeConnect(ObjectMolecule *I,BondType **bond,AtomInfoType *ai,
                                                 else if(((!strcmp(ai1->name,"C2"))&&(!strcmp(ai2->name,"N3")))||
                                                         ((!strcmp(ai2->name,"C2"))&&(!strcmp(ai1->name,"N3")))) 
                                                   order=2;
+                                                else if(((!strcmp(ai1->name,"P"))&&(!strcmp(ai2->name,"O1P")))||
+                                                        ((!strcmp(ai2->name,"P"))&&(!strcmp(ai1->name,"O1P")))) 
+                                                  order=2;
+                                                else if(((!strcmp(ai1->name,"P"))&&(!strcmp(ai2->name,"O2P")))||
+                                                        ((!strcmp(ai2->name,"P"))&&(!strcmp(ai1->name,"O2P")))) 
+                                                  order=2;
+                                                
                                               }
                                               break;
                                             }
@@ -2683,6 +2744,13 @@ int ObjectMoleculeConnect(ObjectMolecule *I,BondType **bond,AtomInfoType *ai,
                                               else if(((!strcmp(ai1->name,"C5"))&&(!strcmp(ai2->name,"C6")))||
                                                       ((!strcmp(ai2->name,"C5"))&&(!strcmp(ai1->name,"C6")))) 
                                                 order=2;
+                                              else if(((!strcmp(ai1->name,"P"))&&(!strcmp(ai2->name,"O1P")))||
+                                                      ((!strcmp(ai2->name,"P"))&&(!strcmp(ai1->name,"O1P")))) 
+                                                order=2;
+                                              else if(((!strcmp(ai1->name,"P"))&&(!strcmp(ai2->name,"O2P")))||
+                                                      ((!strcmp(ai2->name,"P"))&&(!strcmp(ai1->name,"O2P")))) 
+                                                order=2;
+                                              
                                             }
                                             break;
                                             
@@ -2712,7 +2780,13 @@ int ObjectMoleculeConnect(ObjectMolecule *I,BondType **bond,AtomInfoType *ai,
                                                       ((!strcmp(ai2->name,"C8"))&&(!strcmp(ai1->name,"N7")))) 
                                                 order=2;
                                               else if(((!strcmp(ai1->name,"C4"))&&(!strcmp(ai2->name,"C5")))||
-                                                      ((!strcmp(ai2->name,"C4"))&&(!strcmp(ai1->name,"c5")))) 
+                                                      ((!strcmp(ai2->name,"C4"))&&(!strcmp(ai1->name,"C5")))) 
+                                                order=2;
+                                              else if(((!strcmp(ai1->name,"P"))&&(!strcmp(ai2->name,"O1P")))||
+                                                      ((!strcmp(ai2->name,"P"))&&(!strcmp(ai1->name,"O1P")))) 
+                                                order=2;
+                                              else if(((!strcmp(ai1->name,"P"))&&(!strcmp(ai2->name,"O2P")))||
+                                                      ((!strcmp(ai2->name,"P"))&&(!strcmp(ai1->name,"O2P")))) 
                                                 order=2;
                                               break;
                                             }
@@ -2746,6 +2820,29 @@ int ObjectMoleculeConnect(ObjectMolecule *I,BondType **bond,AtomInfoType *ai,
                                                 break;
                                               }
                                               break;
+                                            }
+                                            break;
+                                          case 'I':
+                                            if(ai1->resn[1]==0) {
+                                              if(((!strcmp(ai1->name,"C8"))&&(!strcmp(ai2->name,"N7")))||
+                                                 ((!strcmp(ai2->name,"C8"))&&(!strcmp(ai1->name,"N7")))) 
+                                                order=2;
+                                              else if(((!strcmp(ai1->name,"C4"))&&(!strcmp(ai2->name,"C5")))||
+                                                      ((!strcmp(ai2->name,"C4"))&&(!strcmp(ai1->name,"C5")))) 
+                                                order=2;
+                                              
+                                              else if(((!strcmp(ai1->name,"C6"))&&(!strcmp(ai2->name,"N1")))||
+                                                      ((!strcmp(ai2->name,"C6"))&&(!strcmp(ai1->name,"N1")))) 
+                                                order=2;
+                                              else if(((!strcmp(ai1->name,"C2"))&&(!strcmp(ai2->name,"N3")))||
+                                                      ((!strcmp(ai2->name,"C2"))&&(!strcmp(ai1->name,"N3")))) 
+                                                order=2;
+                                              else if(((!strcmp(ai1->name,"P"))&&(!strcmp(ai2->name,"O1P")))||
+                                                      ((!strcmp(ai2->name,"P"))&&(!strcmp(ai1->name,"O1P")))) 
+                                                order=2;
+                                              else if(((!strcmp(ai1->name,"P"))&&(!strcmp(ai2->name,"O2P")))||
+                                                      ((!strcmp(ai2->name,"P"))&&(!strcmp(ai1->name,"O2P")))) 
+                                                order=2;
                                             }
                                             break;
                                           case 'P':
@@ -2817,6 +2914,13 @@ int ObjectMoleculeConnect(ObjectMolecule *I,BondType **bond,AtomInfoType *ai,
                                               else if(((!strcmp(ai1->name,"C5"))&&(!strcmp(ai2->name,"C6")))||
                                                       ((!strcmp(ai2->name,"C5"))&&(!strcmp(ai1->name,"C6")))) 
                                                 order=2;
+                                              else if(((!strcmp(ai1->name,"P"))&&(!strcmp(ai2->name,"O1P")))||
+                                                      ((!strcmp(ai2->name,"P"))&&(!strcmp(ai1->name,"O1P")))) 
+                                                order=2;
+                                              else if(((!strcmp(ai1->name,"P"))&&(!strcmp(ai2->name,"O2P")))||
+                                                      ((!strcmp(ai2->name,"P"))&&(!strcmp(ai1->name,"O2P")))) 
+                                                order=2;
+
                                               break;
                                             }
                                             break;
@@ -2832,6 +2936,13 @@ int ObjectMoleculeConnect(ObjectMolecule *I,BondType **bond,AtomInfoType *ai,
                                               else if(((!strcmp(ai1->name,"C5"))&&(!strcmp(ai2->name,"C6")))||
                                                       ((!strcmp(ai2->name,"C5"))&&(!strcmp(ai1->name,"C6")))) 
                                                 order=2;
+                                              else if(((!strcmp(ai1->name,"P"))&&(!strcmp(ai2->name,"O1P")))||
+                                                      ((!strcmp(ai2->name,"P"))&&(!strcmp(ai1->name,"O1P")))) 
+                                                order=2;
+                                              else if(((!strcmp(ai1->name,"P"))&&(!strcmp(ai2->name,"O2P")))||
+                                                      ((!strcmp(ai2->name,"P"))&&(!strcmp(ai1->name,"O2P")))) 
+                                                order=2;
+
                                             }
                                             break;
                                           }
